# JiraCSServer

./: .clauderc  .dockerignore  .env.example  .gitignore  CHANGELOG_V2.md  CLAUDE.md  DEPENDENCY_UPDATE.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LANGMEM_GUIDE.md  MIGRATION_GUIDE.md  MOCK_MODE_GUIDE.md  PROMPT_ENGINEERING_GUIDE.md  QUALITY_EVALUATOR_V2_OPTIMIZATION.md  QUICK_START.md  QUICK_TEST.md  QUICK_TEST_SUMMARY.md  README.md  README_V2.md  STREAMLIT_CLIENT.md  TESTING_STATUS.md  TEST_GUIDE.md  TEST_QUALITY_EVALUATOR_V2.md  TEST_SUMMARY.md  deploy.sh  docker-compose.yml  index.json  manifest.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  repositories  setup-wsl.sh  suppress-dep-warnings.js  test-all-endpoints.sh  test-endpoints.py  tsconfig.json
.claude/: settings.local.json
.obsidian/: workspace.json
app/health/: route.ts
docker/: init-db.sh
docs/: CONTEXT_STORAGE.md  DATABASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  PROMPT_ENGINEERING_GUIDE.md  QUICKSTART_CONTEXT.md  Stage.md  TROUBLESHOOTING.md  spec.md
docs/.obsidian/: workspace.json
nginx/: nginx.conf
src/agents/: classifier-v2.ts  (+8 more)
streamlit_client/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  app.py  pyproject.toml  run.sh
streamlit_client/components/: chat_interface.py  sidebar.py
streamlit_client/config/: settings.py
streamlit_client/data/sessions/: .gitkeep
streamlit_client/services/: api_client.py  checkpoint_service.py  session_manager.py
streamlit_client/streamlit_client/data/sessions/: JCSH-1.json
(+36 files in other folders)
